--- a/Willing/Podfile
+++ b/Willing/Podfile
@@ -7,4 +7,12 @@ target 'Willing' do
 
   # Pods for Willing
 
+  # add pods for desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
+
+  # Add the pods for the Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  pod 'Firebase/Auth'
+  pod 'Firebase/Firestore'
+
 end
