--- a/Willing/Podfile
+++ b/Willing/Podfile
@@ -14,5 +14,6 @@ target 'Willing' do
   # For example, to use Firebase Authentication and Cloud Firestore
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
+  pod 'FirebaseFirestoreSwift', '~> 7.0-beta'
 
 end
