challenge 구현 (목록 / 개설 / 상세보기)

--- a/Willing/Podfile
+++ b/Willing/Podfile
@@ -15,5 +15,7 @@ target 'Willing' do
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
   pod 'FirebaseFirestoreSwift', '~> 7.0-beta'
+  pod 'DLRadioButton', '~> 1.4'
+  pod 'Firebase/Storage'
 
 end
