주요기능 및 ui 구현

--- a/Willing/Podfile
+++ b/Willing/Podfile
@@ -17,5 +17,6 @@ target 'Willing' do
   pod 'FirebaseFirestoreSwift', '~> 7.0-beta'
   pod 'DLRadioButton', '~> 1.4'
   pod 'Firebase/Storage'
+  pod 'FirebaseUI/Storage'
 
 end
